# agent-remote-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/rules/: 01-project-overview.md  02-architecture.md  03-tech-stack.md  04-code-style.md  05-comment-style.md  06-commands.md  07-quality-security.md  08-collaboration.md  09-data-persistence.md  10-identity-auth.md  11-node-control.md  README.md
migrations/: README  env.py
migrations/versions/: 0001_core_schema.py  0002_identity_auth.py  0003_node_control.py  0004_connection_fields.py  0005_tool_account_binding.py  0006_workspace_git_sync_policy.py  0007_native_runtime.py  0008_sync_session_active_status.py
scripts/: check_docstrings.py  docker-entrypoint.sh  install-githooks.sh  prepare-release.sh  run-quality-checks.sh  update-changelog.sh
src/agent_remote_server/: __init__.py  config.py  context.py  db.py  errors.py  logging.py  main.py  redis_client.py
src/agent_remote_server/api/: audit_logs.py  auth.py  browser_sessions.py  deps.py  developer_credentials.py  devices.py  health.py  network.py  node_api.py  nodes.py  routes.py  sessions.py  sync_sessions.py  tool_accounts.py  users.py  workspaces.py
src/agent_remote_server/middleware/: request_id.py
src/agent_remote_server/models/: __init__.py  audit.py  auth.py  mixins.py  network.py  nodes.py  sessions.py  tools.py  users.py  workspaces.py
src/agent_remote_server/repositories/: __init__.py  base.py  browser_sessions.py  connections.py  identity.py  nodes.py  sessions.py  tool_accounts.py  workspaces.py
src/agent_remote_server/schemas/: audit.py  auth.py  browser_sessions.py  connections.py  developer_credentials.py  devices.py  health.py  nodes.py  sessions.py  tool_accounts.py  users.py  workspaces.py
src/agent_remote_server/security/: __init__.py  crypto.py  passwords.py  tokens.py  totp.py
src/agent_remote_server/services/: __init__.py  browser_sessions.py  connections.py  developer_credentials.py  identity.py  nodes.py  persistence.py  sessions.py  tool_accounts.py  tool_registry.py  (+1 more)
tests/: test_browser_sessions_api.py  test_config.py  test_connections_api.py  test_health.py  test_identity_api.py  test_node_api.py  test_persistence.py  test_sessions_api.py  test_tool_accounts_api.py  test_workspaces_api.py
