[project]
name = "agent-remote-server"
version = "0.0.4+fix.2"
description = "Control-plane API for agent-remote."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<26",
    "asyncpg>=0.30,<1",
    "cryptography>=43,<47",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "redis>=5.2,<7",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
    "websockets>=14,<16",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_remote_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
files = ["src/agent_remote_server", "tests", "scripts"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
